@@ -1,3 +1,5 @@
+2012-06-29 Federico Nova <nova@physics.utexas.edu>
+        * added sequentiator configuration interface
 2012-06-26 Federico Nova <nova@physics.utexas.edu>
         * Xavier Garrido fixed some conversions of value to reference
 2012-06-26 Federico Nova <nova@physics.utexas.edu>
